switch specifier to Nimbus Roman (roman) to agree with 11pt font perfectly

--- a/src/b1.tex
+++ b/src/b1.tex
@@ -1,7 +1,7 @@
 \documentclass[11pt, a4paper]{article}
 
 % This is the ERC formatting package. It lives in `ercformatting.sty`.
-\usepackage[b1,showinstructions,times]{ercformatting} % Pass options `b1` or `b2` to compile the tkkkwo versions for submission
+\usepackage[b1,showinstructions,roman]{ercformatting} % Pass options `b1` or `b2` to compile the tkkkwo versions for submission
 % Options:
 % - `b1` for the first part of the proposal. See B1 template for details.
 % - `b2` for the second part of the proposal. See B2 template for details.
@@ -9,7 +9,7 @@
 %   Detailed instructions on this can be found in Catrin Campbell-Moore's template here: 
 %   https://www.overleaf.com/latex/templates/unofficial-erc-template-using-versions/zyqqjfbckwqc
 % - `showinstructions` to show ERC instructions in the compiled PDF in color. Remove to hide them (or delete them from the template).
-% - `times` to use Adobe Times Roman font. If not passed, LaTeX default font for article class is used.
+% - `roman` to use Nimbus Roman font. If not passed, LaTeX default font for article class is used.
 
 
 % SET THESE VARIABLES!
