replace environments for different sections with start commands
Less problems, since we really don't need to be in an environment!

--- a/src/b1.tex
+++ b/src/b1.tex
@@ -46,8 +46,7 @@ HERE GOES YOUR PROPOSAL SUMMARY.
 \end{abstract}
 
 
-
-\begin{b1-sec-a}
+\startsectiona
 HERE GOES B1 SECTION A
 
 \section{Some \LaTeX\ formatting hints}
@@ -76,13 +75,12 @@ One way to Save additional space is by using a paragraph as following:
 
 \paragraph{Aim 1:} This paragraph describes my first aim. It is going to be several lines long, but has this nice and fancy bold face title.
 It is sometimes useful to have some citations, e.g., \citet{Mayer2010} or \citet{b2fh}.
-\end{b1-sec-a}
 
 \newpage
 \bibliography{\bibliographyfile}
 
-\begin{b1-sec-b}
 
+\startsectionb
 \pdfbookmark[1]{Personal Details}{unnumbered}
 \cvsection*{Personal Details}
 
@@ -150,10 +148,6 @@ You may include a short explanation of the significance of the listed examples.}
 \cvsubsection{Other contributions to the research community}
 
 \instruction{You may include a list of particularly noteworthy contributions to the research community you have made other than research achievements and peer recognition and a short explanation of these contributions. The purpose of this section is to allow the panels to take a more rounded view of your career and achievements and to ensure that any additional responsibilities, commitments and leadership roles that you have taken on beyond your individual research activities are recognised and taken into account.}
-\end{b1-sec-b}
-
-
-
 
 
 \instruction{\vspace*{0.5cm}}
