--- a/src/b2.tex
+++ b/src/b2.tex
@@ -47,13 +47,11 @@
 \begin{document}
 \maketitle
 
-\begin{b2-sec-a}
+\startsectiona
     HERE GOES B2 SECTION A. To start this out in a good way, here's a cool citation: \citet{Mayer2010}. And if you are interested in Astrophysics, you must read \citet{b2fh}.
-\end{b2-sec-a}
 
-\begin{b2-sec-b}
+\startsectionb
 HERE GOES B2 SECTION B
-\end{b2-sec-b}
 
 
 \instruction{\vspace{1cm}}
@@ -63,7 +61,7 @@ HERE GOES B2 SECTION B
 \newpage
 \bibliography{\bibliographyfile}
 
-\begin{b2-app-funding}
+\startappendix
 \section*{Current research grants (Please indicate "No funding" when applicable):}
 
 \begin{fundingtable}
@@ -84,11 +82,6 @@ HERE GOES B2 SECTION B
 \hline
 &   &   &   &   &   \\
 \end{fundingtable}
-
-
-
-\end{b2-app-funding}
-
 
 
 \end{document}
