Update formatting in case parskip is used
Titles will still look good!

--- a/src/ercformatting.sty
+++ b/src/ercformatting.sty
@@ -167,10 +167,10 @@
 \ifercformatting@BOne
 	\renewcommand{\maketitle}{
         {\vspace*{1cm}\centering\bfseries\large
-		\@granttypeyear\par\Large
+		\@granttypeyear\\\Large
 		Research proposal [Part B1]\\
 		\normalfont\huge
-		\vspace{.5cm}\@title\par
+		\vspace{.5cm}\@title\\
 		\vspace{.2cm}\@acronym\par
 		\normalfont\normalsize\raggedright\vspace{1cm}
         \textbf{Cover page:}
@@ -187,7 +187,7 @@
 \ifercformatting@BTwo
 	\renewcommand{\maketitle}{
 		{\centering\bfseries\Large
-		\@granttypeyear\par\Large
+		\@granttypeyear\Large\\
 		Part B2\\
 		\vspace{.5cm}
 		}
@@ -315,7 +315,7 @@ Please use plain typed text, avoiding formulae and other special characters. The
     \else
         \newpage
         \begin{center}
-            \large{\textbf{Appendix: All current grants and on-going / submitted grant applications of the PI}}\par
+            \large{\textbf{Appendix: All current grants and on-going / submitted grant applications of the PI}}\\
             \large{\textbf{(Funding ID)}}\par
         \instruction{\textbf{Mandatory Information} (does not count towards page limit)}
         \end{center}
