--- a/src/b1.tex
+++ b/src/b1.tex
@@ -13,7 +13,7 @@
 
 
 % SET THESE VARIABLES!
-\acronym{ACRONYM}
+\acronym{INVISIBLE}
 \institution{My Uni}
 \author[Last name]{First name Last name}
 \granttypeyear{ERC Consolidator Grant 2025}
